--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load project_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +10,13 @@
 
 <body>
     <div id="header">
+        <div id="login">
+            <p>Hello {{ user.first_name }}</p> 
+        </div>
         <div id="nav-menu">
         <ul>
-            <li><a href="/projects">Newsfeed</a></li>
-            <li><a href="/">Projects</a></li>
+            <li><a href="/newsfeed">Newsfeed</a></li>
+            <li><a href="/projects">Projects</a></li>
             <li><a href="/">Budgets</a></li>
         </ul>
         </div>
