--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset-iso-8859-1" /> 
     <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/ui-darkness/jquery-ui-1.8.16.custom.css">
+    
     {% block links %}{% endblock %}
+
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.6.2.min.js"></script> 
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.8.16.custom.min.js"></script> 
     {% block scripts %}{% endblock %}
 </head>
 
