--- a/templates/base.html
+++ b/templates/base.html
@@ -3,42 +3,21 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset-iso-8859-1" /> 
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/ui-darkness/jquery-ui-1.8.16.custom.css">
     
     {% block links %}{% endblock %}
 
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.6.2.min.js"></script> 
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.js"></script> 
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.8.16.custom.min.js"></script> 
+ 
     {% block scripts %}{% endblock %}
 </head>
 
 <body>
-    <div id="header">
-        <div id="login">
-            <p>Hello {{ user.first_name }}</p> 
-        </div>
-        <div id="nav-menu">
-        <ul>
-            <li><a href="/newsfeed">Newsfeed</a></li>
-            <li><a href="/projects">Projects</a></li>
-            <li><a href="/">Budgets</a></li>
-        </ul>
-        </div>
-    </div>
-    <div id=container>
-        <div id="content" class="column">
-            {% block content %}{% endblock %}
-        </div>
-        <div id="menu" class="column">
-            {% block menu %}{% endblock %}
-        </div> 
-        <div id="info" class="column">
-            {% block info %}{% endblock %}
-        </div>
-    </div>
-    <div id="footer">
-        {% block footer %}{% endblock %}
-    </div>
+<div id="nav-tabs" class="ui-widget ui-helper-reset">
+    <ul>
+        <li><a href="/projects/">Projects</a></li>
+    </ul>
+</div>
 </body>
 </html>
