--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -1,30 +1,3 @@
-{% extends "base.html" %}
-{% block links %}
-{% endblock %}
-{% block scripts %}
-    <script type="text/javascript" src="{{ STATIC_URL }}js/projects.js"></script> 
-{% endblock %}
+<div id="content">
 
-{% block content %}
-    <div id="accordion">
-    {% regroup projects by department.name as departments %}
-    {% for department in departments %}
-        <h1><a href="#">{{ department.grouper|capfirst }}</a></h1>
-        <div>
-            {% for project in department.list %}
-            {% if not project.is_complete %}
-            <h2>{{ project|capfirst }}</h2>
-                {% for milestone in project.milestone_set.all %}
-                <h3>{{ milestone }}</h3>
-                    <ul>
-                    {% for task in milestone.task_set.all %}
-                    <li> {{ task }} by {{ task.planned_completion_date }}</li> 
-                    {% endfor %}
-                    </ul>
-                {% endfor %}
-            {% endif %}
-            {% endfor %}
-        </div>
-    {% endfor %}
-    </div>
-{% endblock %}
+</div>
