--- a/templates/projects/feeds.html
+++ b/templates/projects/feeds.html
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/feeds.js"></script> 
-<div id="content">
-<span id="toolbar" class="ui-widget-header ui-corner-all">
+
+<span id="feed_list_toolbar" class="ui-widget-header ui-corner-all tab-toolbar">
     <span id="feed-order">
         <button id="feed-duedate" class="feed-order-button" order="duedate">order by due date</button>
         <button id="feed-user" class="feed-order-button" order="user">order by user</button>
@@ -8,7 +8,7 @@
     </span>
 </span>
 
-<div id="feed">
+<div id="feed" class="tab-content">
 {% ifequal order "duedate" %}
 {% regroup feeds|dictsortreversed:"stamp" by stamp.date as feed_list %}
 {% endifequal %}
@@ -30,5 +30,4 @@
     </div>
     {% endfor %}
 {% endfor %}
-</div>
 </div>
