--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
 <div id="header" class="ui-widget-header ui-corner-all">
     <span id="global-buttons">
         <button id="global-project">Project Organizer</button>
@@ -18,12 +19,13 @@
         <button id="global-users">User Maintenance</button>
     </span>
 </div>
+
 <div id="nav-tabs" class="ui-widget ui-helper-reset">
     <ul>
-        <li><a href="/projects/projects/">Projects</a></li>
-        <li><a href="/projects/milestones/">Milestones</a></li>
-        <li><a href="/projects/tasks/">Tasks</a></li>
-        <li><a href="/projects/feeds/">News Feed</a></li>
+        <li><a href="/projects/project_list/">Projects</a></li>
+        <li><a href="/projects/milestone_list/">Milestones</a></li>
+        <li><a href="/projects/task_list/">Tasks</a></li>
+        <li><a href="/projects/feed_list/">News Feed</a></li>
     </ul>
 </div>
 </body>
