cleaned up the feed entry list. views and templates now ok started to remove order by buttons

--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -25,7 +25,7 @@
         <li><a href="/projects/project_list/">Projects</a></li>
         <li><a href="/projects/milestone_list/">Milestones</a></li>
         <li><a href="/projects/task_list/">Tasks</a></li>
-        <li><a href="/projects/feed_list/">News Feed</a></li>
+        <li><a href="/projects/feedentry_list/">News Feed</a></li>
     </ul>
 </div>
 </body>
